Added sp_CheckBackup.sql, updated scripts

--- a/Scripts/Powershell/DeployMaintenanceScripts/Config.json
+++ b/Scripts/Powershell/DeployMaintenanceScripts/Config.json
@@ -1,5 +1,5 @@
 {
-    "ScriptSourceDirectoryBase":"C:\\Work\\_misc\\",
+    "ScriptSourceDirectoryBase":"C:\\Work\\Scripts.SQL\\",
     "ScriptDirectoryBase":"C:\\Work\\1729\\Scripts\\Powershell\\DeployMaintenanceScripts\\",
     "servers":[
         {
